--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,4 +19,4 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: "./"
-          server-dir: "/kominfolhokseumawe.rf.gd/htdocs/"
+          server-dir: "/kominfolhokseumawe.rf.gd/htdocs/laravel"
