--- a/.env
+++ b/.env
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+SESSION_DOMAIN=localhost # this is your frontend
+SANCTUM_STATEFUL_DOMAINS=LOG_CHANNEL:9000 #assuming this is your api port
+
+ORIGIN=http://127.0.0.1:4000
