--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,8 @@
     "version": 2,
     "builds": [
         {
-            "src": "public/index.php",
-            "use": "@vercel/php",
-            "config": { "maxLambdaSize": "50mb" }
-        },
-        {
-            "src": "public/**/*",
-            "use": "@vercel/static"
+            "src": "Dockerfile",
+            "use": "@vercel/docker"
         }
-    ],
-    "routes": [{ "src": "/(.*)", "dest": "public/index.php" }]
+    ]
 }
