--- a/.env
+++ b/.env
@@ -21,19 +21,26 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=viaduct.proxy.rlwy.net
+# DB_PORT=42096
+# DB_DATABASE=diskominfo
+# DB_USERNAME=root
+# DB_PASSWORD=VWrywVOIikPOjzsVqGrdRCFAxjYCSjRc
+
 DB_CONNECTION=mysql
-DB_HOST=viaduct.proxy.rlwy.net
-DB_PORT=42096
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_DATABASE=diskominfo
 DB_USERNAME=root
-DB_PASSWORD=VWrywVOIikPOjzsVqGrdRCFAxjYCSjRc
+DB_PASSWORD=
 
 # DB_CONNECTION=sqlite
-# # DB_HOST=127.0.0.1
-# # DB_PORT=5432
+# DB_HOST=127.0.0.1
+# DB_PORT=5432
 # DB_DATABASE="/Users/admin/Documents/Web Development/Web Fahril/Backend/database/database.sqlite"
-# # DB_USERNAME=
-# # DB_PASSWORD=
+# DB_USERNAME=
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
